--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,18 @@
 			<artifactId>akka-actor_2.11</artifactId>
 			<version>2.3.6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-cluster_2.11 -->
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-cluster_2.11</artifactId>
+			<version>2.3.6</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-contrib_2.11 -->
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-contrib_2.11</artifactId>
+			<version>2.3.6</version>
+		</dependency>
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-testkit_2.11</artifactId>
